Fix beads z-index issue, clean html
Got rid of some commented out html

--- a/static/style.css
+++ b/static/style.css
@@ -314,7 +314,7 @@ footer a:hover {
         1px 2px 0 0 rgba(0,0,0,0.15), 
         1px 3px 1px 0 rgba(0,0,0,0.1);
     border-radius: 5mm;
-    z-index: 9999;
+    z-index: 9998;
   }
 
   .controls {
